@@ -121,9 +121,26 @@ if test "$ac_cv_ip6" = "no"; then
 AC_MSG_WARN(Your system does not support IPv6 so it will not be enabled)
 else
 AC_DEFINE(INET6)
+have_v6="yes"
+	AC_MSG_CHECKING([for struct in6addr_any])
+	AC_COMPILE_IFELSE(
+		[AC_LANG_PROGRAM(
+			[[#define IN_AUTOCONF
+			#include <sys/types.h>
+			#include <sys/socket.h>
+			#include <netinet/in.h>]],
+			[[struct in6_addr a = in6addr_any;]]
+		)],
+		[AC_MSG_RESULT(yes)],
+		[
+			AC_MSG_RESULT(no)
+			AC_DEFINE(NO_IN6ADDR_ANY)
+		]
+	)
 fi
 LIBS="$save_libs"
 ])
+
 AC_CHECK_HEADER(sys/param.h,AC_DEFINE(PARAMH))
 AC_CHECK_HEADER(stdlib.h,AC_DEFINE(STDLIBH))
 AC_CHECK_HEADER(stddef.h,AC_DEFINE(STDDEFH))
